# infragraph

./: README.md  pyproject.toml
examples/: campus.json
src/infragraph/: __init__.py  cli.py  core.py
tests/: test_core.py
